# omni-orchestrator

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json  settings.local.json
backend/: broker.ts  package.json  tsconfig.json
backend/shared/: types.ts
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ActivityFeed.tsx  ActivityMonitor.tsx  AgentPanel.tsx  AgentSphere.tsx  ClaudeIcon.tsx  ConciergeSidebar.tsx  ConnectionLine.tsx  DiffViewer.tsx  ErrorBoundary.tsx  NodeCanvas.tsx  NodeLink.tsx  NodeMap.tsx  NodePlatform.tsx  PermissionBanner.tsx  PixelAvatar.tsx  PromptBar.tsx  RightDrawer.tsx  Scene3D.tsx  SettingsScreen.tsx  Sidebar.tsx  TitleBar.tsx  WelcomeScreen.tsx  XtermPanel.tsx
src/components/ui/: badge.tsx  button.tsx
src/hooks/: useConcierge.ts  useDiffPoller.ts  useWebSocket.ts
src/lib/: agentManager.ts  broker.ts  concierge.ts  conciergeContextProvider.ts  permissionDetector.ts  ptyClean.ts  threeLayerContextProvider.ts  utils.ts  workspace.ts
src/stores/: appStore.ts
src/styles/: globals.css
